# r1-distill

./: .gitignore  main.py  pyproject.toml
configs/: eval-redistill.yml  eval.yml  test.yml  train.yml  train32b-upgraded-8bs-50clip-larger.yml  train32b-upgraded-8bs-50clip.yml  train32b-upgraded.yml  train32b.yml
src/: bench.py  cleaners.py  config.py  dataset.py  lm_wrapper.py  redistill_trainer.py  utils.py
