[project]
name = "r1-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.1",
    "datasets>=3.2.0",
    "hqq>=0.2.2",
    "huggingface>=0.0.1",
    "lighteval>=0.7.0",
    "lm-eval[ifeval,math,sentencepiece]>=0.4.7",
    "numpy>=1.26.4",
    "ruff>=0.9.4",
    "transformers>=4.48.2",
    "wandb>=0.19.5",
]
